Mejoras en seguimiento: Fecha de visita no puede ser posterior a 12 días después de la fecha de inicio y Fecha de visita final no puede ser posterior a 60 días después de la fecha de inicio. Correcciones: en el tamizaje de persona chf validar antes de realizar cualquier proceso si el código del nuevo participante ya pertenece a la cohorte o a la cohorte chf

--- a/res/values/strings_tamizaje.xml
+++ b/res/values/strings_tamizaje.xml
@@ -153,6 +153,7 @@
     <string name="jefeFamiliaHint">Nombres y apellidos del jefe de la casa de cohorte pediátrica</string>
     <string name="direccion">Dirección</string>
     <string name="direccionHint">Dirección de la casa de cohorte pediátrica</string>
+    <string name="participantechfExiste">Participante ya pertenece a la cohorte de familia</string>
 
     <string name="aceptaParteBDengue">Parte B Dengue</string>
     <string name="aceptaParteBDengueHint">¿Acepta Parte B Almacenamiento y uso de Muestras en Estudios Futuros?</string>
