--- a/res/values/strings_seguimiento.xml
+++ b/res/values/strings_seguimiento.xml
@@ -41,6 +41,8 @@
 	<string name="wrongSelect">La respuesta para <xliff:g id="variable">%1$s</xliff:g> es requerida</string>
 	<string name="duplicateDate">Fecha ya está registrada</string>
     <string name="duplicateVisit">Visita ya está registrada</string>
+    <string name="wrong_fecha_visita2">Fecha de visita es posterior a 12 días después de la fecha de inicio</string>
+    <string name="wrong_fecha_visita3">Fecha de visita es posterior a 60 días después de la fecha de inicio</string>
 	
 	<string name="sint">Sintomas</string>
 	<string name="fecha_sintoma">Fecha sintoma</string>
