--- a/res/values/strings_cohorte_pediatrica.xml
+++ b/res/values/strings_cohorte_pediatrica.xml
@@ -38,6 +38,7 @@
     <string name="info_sa">Consentimiento Seroprevalencia</string>
     <string name="info_telefonos">Teléfonos</string>
     <string name="info_coordenadas">Coordenadas</string>
+    <string name="info_recon_chf">Reconsentimiento CHF 18</string>
 
     <string name="house_survey_missing">Realizar encuesta de casa</string>
     <string name="part_survey_missing">Realizar encuesta de participante</string>
@@ -132,6 +133,7 @@
     <string name="consden_missing">Realizar Consentimiento Dengue</string>
     <string name="consden_missing_abc">Realizar Consentimiento Dengue A,B,C</string>
     <string name="consden_missing_d">Realizar Consentimiento Dengue D</string>
+    <string name="reconchf18_missing">Realizar Reconsentimiento CHF 18</string>
     <string name="parto_missing">Realizar Datos Parto BB</string>
     <string name="activos">Descargar solo activos</string>
     <string name="terreno">Descargar solo participantes</string>
