--- a/res/menu/menu_info.xml
+++ b/res/menu/menu_info.xml
@@ -22,6 +22,7 @@
             <item android:id="@+id/SURVEY1" android:title="@string/info_survey1"/>
             <item android:id="@+id/RECONSFLU" android:title="@string/info_reconflu"/>
             <item android:id="@+id/RECONS" android:title="@string/info_recon"/>
+            <item android:id="@+id/RECONS_CHF" android:title="@string/info_recon_chf"/>
             <item android:id="@+id/ZIKA" android:title="@string/info_zika"/>
             <!--<item android:id="@+id/CONSSA" android:title="@string/info_sa"/>-->
             <item android:id="@+id/SURVEY3" android:title="@string/info_survey3"/>
