--- a/res/values/strings_cohorte_pediatrica.xml
+++ b/res/values/strings_cohorte_pediatrica.xml
@@ -68,6 +68,7 @@
     <string name="partsa_survey_missing">Realizar encuesta de participante SA</string>
     <string name="cons_sa_missing">Realizar consentimiento Seroprevalencia</string>
     <string name="addresschange_missing">Registrar coordenadas</string>
+    <string name="pendiente_condengue">Pendiente CONS-DEN, informar al supervisor!!</string>
 
     <string name="header_rnd">Por favor ingrese porque razón no ingreso la información debida.</string>
     <string name="orazon">Otra razón..</string>
