--- a/res/layout/recepcionbhc_pdcs.xml
+++ b/res/layout/recepcionbhc_pdcs.xml
@@ -41,6 +41,15 @@
                 android:textStyle="bold" />
         </LinearLayout>
 
+        <Spinner
+                android:id="@+id/metodo_busqueda"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingTop="10dip"
+                android:singleLine="true"
+                android:textSize="12sp"
+                android:textStyle="bold" />
+
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
@@ -56,7 +65,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1.0"
                 android:ellipsize="end"
-                android:focusable="false"
+                android:focusable="true"
                 android:hint="@string/barcode_code"
                 android:singleLine="true"
                 android:textSize="18sp"
@@ -74,7 +83,7 @@
             android:id="@+id/checkPaxgene"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:focusable="true"
+            android:focusable="false"
             android:paddingTop="10dip"
             android:text="@string/pax"
             android:textSize="18sp"
@@ -115,7 +124,7 @@
             android:layout_height="wrap_content"
             android:paddingTop="10dip"
             android:singleLine="true"
-            android:textSize="18sp"
+            android:textSize="12sp"
             android:textStyle="bold" />
 
         <TextView
