--- a/res/values/strings_cohorte_pediatrica.xml
+++ b/res/values/strings_cohorte_pediatrica.xml
@@ -39,6 +39,7 @@
     <string name="info_telefonos">Teléfonos</string>
     <string name="info_coordenadas">Coordenadas</string>
     <string name="info_recon_chf">Reconsentimiento CHF 18</string>
+    <string name="info_conflu_uo1">Consentimiento Influenza UO1</string>
 
     <string name="house_survey_missing">Realizar encuesta de casa</string>
     <string name="part_survey_missing">Realizar encuesta de participante</string>
@@ -131,6 +132,7 @@
     <string name="action_settings">Settings</string>
     <string name="uploading_docs">Enviar todos los documentos al servidor?</string>
     <string name="consflu_missing">Realizar Consentimiento Influenza</string>
+    <string name="consflu_missing_UO1">Realizar Consentimiento Influenza UO1</string>
     <string name="consden_missing">Realizar Consentimiento Dengue</string>
     <string name="consden_missing_abc">Realizar Consentimiento Dengue A,B,C</string>
     <string name="consden_missing_d">Realizar Consentimiento Dengue D</string>
