Se agrega estudio UO1 a la aplicación. Descargar casos positivos activos, registrar visitas, registrar muestras y subir datos.

--- a/res/values/strings_menus.xml
+++ b/res/values/strings_menus.xml
@@ -7,4 +7,6 @@
     <string name="download">Descargar Datos</string>
     <string name="upload">Subir Datos</string>
     <string name="catalog">Catálogos</string>
+
+    <string name="positives">Positivos</string>
 </resources>
