--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -4,6 +4,7 @@
     <string-array name="menu_main">
         <item>@string/main_1</item>
         <item>@string/main_2</item>
+        <item>@string/main_3</item>
     </string-array>
     
     <string-array name="menu_cohorte_familia">
@@ -119,4 +120,16 @@
         <item>@string/info_casasa</item>
         <item>@string/info_participantesa</item>
     </string-array>
+
+    <string-array name="menu_influenza_UO1">
+        <item>@string/positives</item>
+        <item>@string/download</item>
+        <item>@string/upload</item>
+        <item>@string/exit</item>
+    </string-array>
+    <string-array name="menu_visita_uo1">
+        <item>@string/sint</item>
+        <item>@string/samples_caso</item>
+    </string-array>
+
 </resources>
