--- a/res/values/strings_main.xml
+++ b/res/values/strings_main.xml
@@ -2,6 +2,7 @@
 <resources>
     <string name="main_1">Estudio Cohorte Familia</string>
     <string name="main_2">Estudio Cohorte Pediatrica</string>
+    <string name="main_3">Estudio UO1</string>
     <string name="barrio">Barrio</string>
     <string name="manzana">Manzana</string>
     <string name="casa_search">Buscar Casa</string>
