--- a/res/values/strings_preferences.xml
+++ b/res/values/strings_preferences.xml
@@ -14,6 +14,6 @@
     <string name="app_preferences">Configuración Aplicación</string>
     <string name="update_app_preferences">Actualizar Aplicación</string>
     <string name="version_app_preferences">Versión 4.6.0</string>
-    <string name="versiondate_app_preferences">Ago 27, 2019</string>
+    <string name="versiondate_app_preferences">Sep 02, 2019</string>
 
 </resources>
