--- a/res/values/strings_menus.xml
+++ b/res/values/strings_menus.xml
@@ -9,4 +9,5 @@
     <string name="catalog">Catálogos</string>
 
     <string name="positives">Positivos</string>
+    <string name="vaccines">Vacunas</string>
 </resources>
