Se agrega formulario de síntomas pisitivos UO1

--- a/res/layout/list_add_uo1.xml
+++ b/res/layout/list_add_uo1.xml
@@ -43,6 +43,16 @@
 
         <Button
                 android:background="@drawable/selectable_item_background"
+                android:id="@+id/add_symptom_uo1_button"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:text="@string/new_sint"
+                android:drawableTop="@drawable/ic_menu_invite"
+                style="?android:attr/buttonBarStyle" />
+
+        <Button
+                android:background="@drawable/selectable_item_background"
                 android:id="@+id/new_rojo_uo1_button"
                 android:layout_width="0dp"
                 android:layout_weight="1"
