--- a/res/values/strings_preferences.xml
+++ b/res/values/strings_preferences.xml
@@ -13,7 +13,7 @@
 
     <string name="app_preferences">Configuración Aplicación</string>
     <string name="update_app_preferences">Actualizar Aplicación</string>
-    <string name="version_app_preferences">Versión 4.6.6</string>
-    <string name="versiondate_app_preferences">Oct 17, 2019</string>
+    <string name="version_app_preferences">Versión 5.0</string>
+    <string name="versiondate_app_preferences">Dic 13, 2020</string>
 
 </resources>
