Se agrega estudio actual encuesta peso y talla Criterio preguntas almacenamiento de agua cambia: si existe un participante con dengue y es encuesta de casa pediatrica o es encuesta de familia pero compartida pediatrica, preguntar detalle de almacenamiento de agua Encuesta de visita se agrega descripcion otra razon no fue exitosa la Visita Se agrega numero de cuarto cuando se ingresa un area ambiente tipo habitacion Se corrige bug en retiro de sensores, reactivaba los inactivos

--- a/res/values/strings_areaambiente_casa.xml
+++ b/res/values/strings_areaambiente_casa.xml
@@ -22,4 +22,7 @@
 	<string name="largo">Largo (mts)</string>
 	<string name="ancho">Ancho (mts)</string>
 	<string name="area">Area (mts2)</string>
+    <string name="numeroCuarto">Número del cuarto</string>
+    <string name="numeroCuartoHint">Favor indicar el número de cuarto asignado a la habitación. Debe coincidir con el asignado durante las mediciones</string>
+    <string name="existeNumeroCuarto">Número de cuarto ya fue asignado a otra habitación</string>
 </resources>
