--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -78,7 +78,7 @@
 
     <string-array name="menu_info">
         <item>@string/info_participante</item>
-        <item>@string/info_reconflu</item>
+        <!--<item>@string/info_reconflu</item>-->
         <item>@string/info_visit</item>
         <item>@string/info_weight</item>
         <item>@string/info_survey2</item>
@@ -86,7 +86,7 @@
         <item>@string/info_survey3</item>
         <item>@string/info_vacc</item>
         <item>@string/info_codscasa</item>
-        <item>@string/info_recon</item>
+        <!--<item>@string/info_recon</item>-->
         <item>@string/info_sample</item>
         <item>@string/info_gift</item>
         <item>@string/info_sa</item>
@@ -101,7 +101,6 @@
 
     </string-array>
     <string-array name="menu_review">
-        <item>@string/info_reconflu</item>
         <item>@string/info_visit</item>
         <item>@string/info_weight</item>
         <item>@string/info_survey2</item>
@@ -109,7 +108,6 @@
         <item>@string/info_survey3</item>
         <item>@string/info_vacc</item>
         <item>@string/main_survey</item>
-        <item>@string/info_recon</item>
         <item>@string/info_sample</item>
         <item>@string/info_gift</item>
         <item>@string/info_sa</item>
